wcag contrast fail fix

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,9 +12,9 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $text-color-light: #fff;
-$text-link-color:  #fd6804;
+$text-link-color:  #116471;
 $background-color: #fdfdfd !default;
-$brand-color:      #fd6804 !default;
+$brand-color:      #1EA8BE !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
